--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -83,9 +83,9 @@
           justify-content: center;
           &:hover {
             border-radius: 5px;
-            text-decoration: none;
             background-color: var(--clr-green);
             color: var(--clr-white);
+            text-decoration: none !important;
           }
         }
       }
