--- a/scss/layout/main/_testimony.scss
+++ b/scss/layout/main/_testimony.scss
@@ -32,13 +32,16 @@ section.testimony {
     padding-bottom: 2rem;
     padding: 45px 35px;
     overscroll-behavior-x: contain;
+
     &:not(:hover) {
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
     &:not(:hover)::-webkit-scrollbar {
       display: none;
     }
+
     .card {
       position: relative;
       z-index: 1;
@@ -51,6 +54,7 @@ section.testimony {
       background-color: var(--clr-white);
       box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.1);
       gap: var(--gap);
+      transition: all 0.3s ease;
 
       &__img {
         width: 184px;
@@ -61,6 +65,7 @@ section.testimony {
       &__content {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 8px;
 
         &__title {
@@ -84,40 +89,9 @@ section.testimony {
       }
     }
 
-    #card-right {
-      position: absolute;
-      top: 42px;
-      left: 523px;
-      width: 100%;
-      max-width: 366px;
-      padding: 21px;
-      gap: 8px;
+    .card-small {
+      transform: scale(0.7);
       z-index: 0;
-      img {
-        width: 122.444px;
-      }
-    }
-
-    #card-right .card {
-      &__content {
-        gap: 5px;
-
-        &__title {
-          font-size: 1.6rem;
-        }
-
-        &__subtitle {
-          font-size: 0.8rem;
-        }
-
-        &__description {
-          font-size: 0.6rem;
-        }
-
-        &__text {
-          font-size: 1rem;
-        }
-      }
     }
 
     // responsive mobile
@@ -137,6 +111,34 @@ section.testimony {
           width: 100%;
           object-fit: cover;
         }
+      }
+    }
+
+    @media screen and (max-width: 930px) {
+      .card-small {
+        transform: scale(1);
+      }
+    }
+
+    @media screen and (min-width: 930px) {
+      overflow: hidden;
+      .card-small {
+        left: -174px;
+      }
+    }
+  }
+
+  #testimony-cards.hovered {
+    @media screen and (min-width: 930px) {
+      --offset: -172px;
+      overflow: visible;
+      .card-small {
+        transform: scale(1) translateX(var(--offset));
+        z-index: 1;
+      }
+      .card-normal {
+        z-index: 0;
+        transform: scale(0.7) translateX(var(--offset));
       }
     }
   }
