--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,6 +13,7 @@
   --header-height: 95px;
   --container-padding-left-right: 32px;
   --spice-left: 0px;
+  --testinomy-aside-right: 0px;
 
   --clr-black: #1a1a1a;
   --clr-white: #ffffff;
