--- a/scss/layout/main/_testimony.scss
+++ b/scss/layout/main/_testimony.scss
@@ -211,6 +211,8 @@ section.testimony {
 
       img{
         border-radius: 5px;
+        width: 100%;
+        height: auto;
       }
 
       button{
