--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,11 +3,82 @@
 // -----------------------------------------------------------------------------
 
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: auto;
-  padding: 2rem;
+  $breackpoint:688px;
   width: 100%;
-  height: 100px;
-}
+  margin: 0px 0px 32px 0px;
+  @media screen and (min-width: $breackpoint) {
+    margin: 150px 0px 32px 0px;
+  }
+  padding-top: 32px;
+  border-top: 1px solid var(--clr-light-gray);
+
+    .container {
+      margin: 0 auto;
+      .footer {
+        display: flex;
+        flex-direction: column;
+        @media screen and (min-width: $breackpoint) {
+          flex-direction: row;
+        }
+        justify-content: space-between;
+        align-items: center;
+        &__site-logo{
+          align-self: flex-start;
+          @media screen and (min-width: $breackpoint) {
+            align-self: inherit;
+          }
+        }
+        a{
+          text-decoration: none;
+          font-size: 16px;
+        }
+        &__social-network{
+          display: flex;
+          justify-content: center;
+          align-items: baseline;
+          gap: 31px;
+          width: 100%;
+          max-width:  380px;
+          flex-wrap: wrap;
+          background-color: var(--clr-light-gray);
+          padding: 1.6rem;
+          margin: 32px auto;
+          @media screen and (min-width: $breackpoint) {
+            margin-left: 20px;
+            margin-right: 20px;
+          }
+          a{
+            transition: opacity .3 ease;
+            height: 25px;
+            &:hover{
+              opacity: .8;
+            }
+          }
+        }
+        &__links{
+          display: flex;
+          justify-content: space-between;
+          height: 57px;
+          gap: 1.6rem;
+          width: 100%;
+          max-width: 380px;
+          @media screen and (min-width: $breackpoint) {
+            max-width: 185px;
+          }
+          flex-wrap: wrap;
+          &__group {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 8px;
+            a{
+              color: var(--clr-black);
+              &:hover{
+               text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
