refactor(scss/layout/main/_about.scss): update bg image - add blur effect

--- a/scss/layout/main/_about.scss
+++ b/scss/layout/main/_about.scss
@@ -93,7 +93,7 @@ section.about{
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      background-image: url("/img/unsplash-bg.webp");
+      background-image: url("/img/unsplash-bg-2.webp");
       z-index: 1;
 
       &::after{
