fix(_base.scss): fix line-height

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -54,6 +54,10 @@ h2 {
   font-size: 1.8rem;
 }
 
+p{
+  line-height: 1.5;
+}
+
 html {
   font-size: var(--base-font-size);
   scroll-behavior: smooth;
