--- a/scss/layout/main/_testimony.scss
+++ b/scss/layout/main/_testimony.scss
@@ -202,6 +202,7 @@ section.testimony {
       box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.15);
       .surtitle{
         font-size: 1.8rem;
+        line-height: 1.5;
       }
 
       .title{
