refactor(header): refactor header css position to sticky

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -79,8 +79,8 @@ body {
 
 main {
   width: 100%;
-  margin-top: calc(var(--header-height) + 70px);
+  margin-top: 70px;
   @media screen and (max-width: 630px) {
-    margin-top: calc(var(--header-height) + 40px);
+    margin-top:40px;
   }
 }
