--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,7 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    position: fixed;
+    position: sticky;
+    top:0;
     z-index: 100;
     background-color: var(--clr-white);
 
